packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/invalid_config_file/prisma/schema/schema_with_config.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
}

model User {
  id    Int     @id @default(now())
}
